2007-02-23 [colin]	2.7.2cvs67

	* src/addr_compl.c
		Fix refcounting, start and end completion who
		behaved as if there couldn't be any other current
		user of completion

2007-02-23 [wwp]	2.7.2cvs66

	* src/addressbook.c
	* src/addrindex.c
		Address completion fixes: fix addressbook_peek_folder_exists() in
		which the algorithm was ridiculously over-obfuscated and broken.
		Fix addrindex_load_completion() as well, to load addresses in
		completion list with regards to what addressbook_peek_folder_exists()
		returns now.

2007-02-23 [wwp]	2.7.2cvs65

	* src/addr_compl.c
		Add addresses to completion when they're non-empty (thanks to Colin).

2007-02-23 [paul]	2.7.2cvs64

	* src/plugins/pgpcore/passphrase.c
		remove 'const '

2007-02-23 [colin]	2.7.2cvs63

	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/pgpcore/prefs_gpg.h
	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpmime/pgpmime.c
		Try harder to respect user's choice wrt
		gpg-agent even with gpg2, by unsetting
		GPG_AGENT_INFO when necessary.

2007-02-22 [paul]	2.7.2cvs62

	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpcore/sgpgme.h
	* src/plugins/pgpcore/passphrase.c
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpmime/pgpmime.c
		Fix a leak - gpgme_data_release_and_get_mem
		leaks in recent gpgme. Workaround by using
		our own function.

2007-02-22 [paul]	2.7.2cvs61

	* src/gtk/quicksearch.c
		Abandon dynamic search when pressing
		Enter

2007-02-21 [colin]	2.7.2cvs60

	* src/procmsg.c
	* src/plugins/pgpcore/passphrase.c
		Fix little memory leaks
	* src/main.c
		Fix false-positive leak at exit
	* src/gtk/quicksearch.c
		Fix potentially big leak in recursive
		Quicksearch

2007-02-21 [wwp]	2.7.2cvs59

	* src/summaryview.c
		Add missing newline to a debug message.

2007-02-20 [colin]	2.7.2cvs58

	* src/Makefile.am
	* src/mimeview.c
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/pixmaps/mime_pgpsig.xpm
		Add icon for application/pgp-signature
