@@ -1,3 +1,9 @@
+2007-02-23 [colin]	2.7.2cvs68
+
+	* src/compose.c
+		Fix bug that prevented colorization to
+		work without wrap quotation option
+
 2007-02-23 [colin]	2.7.2cvs67
 
 	* src/addr_compl.c
